--- a/index.html
+++ b/index.html
@@ -191,5 +191,6 @@
     <script src="js/ajax.js"></script>
     <script src="js/generateTeams.js"></script>
     <script src="js/printResult.js"></script>
+    <script src="js/generatePoints.js"></script>
   </body>
 </html>
