--- a/index.html
+++ b/index.html
@@ -62,35 +62,22 @@
           <table class="col text-center">
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
+                <span id="firstRoundTeam1A2B" class="tag-sm"></span>
               </td>
             </tr>
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
+                <span id="firstRoundTeam1C2D" class="tag-sm"></span>
               </td>
             </tr>
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
+                <span id="firstRoundTeam1E2F" class="tag-sm"></span>
               </td>
             </tr>
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
-              </td>
-            </tr>
-          </table>
-
-          <table class="col text-center">
-            <tr>
-              <td>
-                <span id="" class="tag-sm"></span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <span id="" class="tag-sm"></span>
+                <span id="firstRoundTeam1G2H" class="tag-sm"></span>
               </td>
             </tr>
           </table>
@@ -98,7 +85,12 @@
           <table class="col text-center">
             <tr>
               <td>
-                <span id="" class="tag-md"></span>
+                <span id="thirdRoundTeam1" class="tag-sm"></span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span id="thirdRoundTeam2" class="tag-sm"></span>
               </td>
             </tr>
           </table>
@@ -106,12 +98,7 @@
           <table class="col text-center">
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <span id="" class="tag-sm"></span>
+                <span id="champion" class="tag-md"></span>
               </td>
             </tr>
           </table>
@@ -119,22 +106,35 @@
           <table class="col text-center">
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
+                <span id="thirdRoundTeam3" class="tag-sm"></span>
               </td>
             </tr>
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
+                <span id="thirdRoundTeam4" class="tag-sm"></span>
+              </td>
+            </tr>
+          </table>
+
+          <table class="col text-center">
+            <tr>
+              <td>
+                <span id="firstRoundTeam1B2A" class="tag-sm"></span>
               </td>
             </tr>
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
+                <span id="firstRoundTeam1D2C" class="tag-sm"></span>
               </td>
             </tr>
             <tr>
               <td>
-                <span id="" class="tag-sm"></span>
+                <span id="firstRoundTeam1F2E" class="tag-sm"></span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span id="firstRoundTeam1H2G" class="tag-sm"></span>
               </td>
             </tr>
           </table>
@@ -191,6 +191,5 @@
     <script src="js/ajax.js"></script>
     <script src="js/generateTeams.js"></script>
     <script src="js/printResult.js"></script>
-    <script src="js/generatePoints.js"></script>
   </body>
 </html>
